--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "next": "13.4.3",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
