added fetching listings, favorite functionality and finished listing creating stpes

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ GITHUB_SECRET=b56bb5ef832b22fe6ef4bf9bc031ce2b63ae4803
 
 GOOGLE_CLIENT_ID=538632923878-jahcdasmk5bbnokge8v3fhah61t6nvvc.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dn66odxuw"
